feature: Make validate token and tests
