# cmd/server/main.go
@@ -21,6 +21,11 @@ import (
 
 // @host      localhost:8080
 // @BasePath  /api/v1
+
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Type "Bearer" followed by a space and JWT token.
 func main() {
 	// Load configuration
 	cfg, err := configs.Load()
